# Supply-Chain-Inventory-Analytics-for-Demand-Forecasting

./: .dockerignore  .env.example  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
data/processed/: cleaned_supply_chain_data.csv  forecast_outputs.csv
data/raw/: supply_chain_data.csv
models/: lr_demand_model.pkl
notebooks/: eda.py
sql/: analysis.sql
src/: __init__.py  forecasting.py  generate_data.py  preprocess.py
